# module-ttt

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: auth.py  documents.py  index.py  tree.py
app/core/: config.py
app/model/: jobs.py
app/services/: graph.py  indexer.py  workers.py
